@@ -1,3 +1,5 @@
+ -- Use Q.931 standard cause codes for asterisk cause codes
+ -- Bug fixes from the bug tracker
 Asterisk 1.0-RC2 
  -- Additional CDR backends
  -- Allow muted to reconnect
